Prevent content from spilling out of the screen

--- a/server/home_automation/home/static/home/HomeTemplate_files/sb-admin.css
+++ b/server/home_automation/home/static/home/HomeTemplate_files/sb-admin.css
@@ -225,3 +225,8 @@ ul.alert-dropdown {
 .panel-yellow > a:hover {
     color: #df8a13;
 }
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
